# release

./: Cargo.toml  README.md  plan-dist-manifest.json
.github/workflows/: ci.yml
src/: backend.rs  cli.rs  detect.rs  git.rs  lib.rs  main.rs  version.rs
src/backends/: bun.rs  cargo.rs  dotnet.rs  go.rs  julia.rs  mod.rs  pnpm.rs  uv.rs  workspace.rs
