[package]
description = ""
edition = "2024"
license = "MIT"
name = "release"
repository = "https://github.com/smartcrabai/release"
version = "0.1.5"

[workspace.metadata.dist]
cargo-dist-version = "0.31.0"
ci = "github"
install-path = "CARGO_HOME"
installers = ["shell", "homebrew"]
publish-jobs = ["homebrew"]
tap = "smartcrabai/homebrew-tap"
targets = [
  "aarch64-apple-darwin",
  "x86_64-unknown-linux-gnu",
  "aarch64-unknown-linux-gnu",
  "x86_64-pc-windows-msvc",
  "aarch64-pc-windows-msvc",
]
# Allow manually edited GitHub Actions workflow to use newer artifact actions
allow-dirty = ["ci"]

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
glob = "0.3"
serde_json = "1"
toml_edit = "0.25"

[dev-dependencies]
tempfile = "=3.27.0"

[profile.release]
codegen-units = 1
lto = true
strip = true

[profile.dist]
inherits = "release"

[lints.clippy]
allow_attributes = "deny"
dbg_macro = "deny"
expect_used = "deny"
pedantic = { level = "warn", priority = -1 }
unwrap_used = "deny"
